syntax = "proto3";

option java_multiple_files = true;
option java_package = "demo";
option java_outer_classname = "HelloWorldProto";
option java_generic_services = true;   // 可以生成rpc接口

package helloworld;

service GreetHelloWorld {
    rpc SayHello (HelloWorldRequest) returns (HelloWorldResponse);
}
service Greet2Hello2World2 {
    rpc SayHello (HelloWorldRequest) returns (HelloWorldResponse);
}
message HelloWorldRequest {
    string name = 1;
}

message HelloWorldResponse {
    string message = 1;
}